# turbodiff

./: .pre-commit-config.yaml  CHANGELOG.md  Cargo.toml  README.md  pyproject.toml  turbodiff.pyi
.github/workflows/: ci.yml
src/: engine.rs  lib.rs  options.rs  pretty.rs  python.rs
tests/: core_diff.rs  deepdiff.rs  deepdiff_core.rs  options.rs  pretty.rs
tests/common/: mod.rs
tests/python/: conftest.py  test_deepdiff.py  test_truthiness.py
