[package]
name = "turbodiff"
version = "1.3.0"
edition = "2021"
description = "Rust-powered DeepDiff core"
readme = "README.md"
repository = "https://github.com/BrightNight-Energy/turbodiff"

[lib]
name = "turbodiff"
crate-type = ["cdylib", "rlib"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
indexmap = "2.2"
pyo3 = { version = "0.21", optional = true, features = ["extension-module", "abi3-py38"] }

[features]
python = ["pyo3"]
