[project]
name = "turbodiff"
version = "1.3.0"
description = "Rust-powered DeepDiff core"
readme = "README.md"
requires-python = ">=3.9"
keywords = ["turbodiff", "deepdiff", "diff", "json", "rust", "fastdiff"]

[build-system]
requires = ["maturin>=1.4,<2.0"]
build-backend = "maturin"

[project.urls]
Repository = "https://github.com/BrightNight-Energy/turbodiff"

[tool.maturin]
features = ["python"]
include = ["turbodiff.pyi", "py.typed"]

[dependency-groups]
dev = [
    "maturin>=1.11.5",
    "numpy>=1.24.4",
    "pandas>=2.2.0",
    "pytest>=8.3.5",
    "ruff>=0.15.0",
]

[tool.hatch.build.targets.wheel]
packages = ["turbodiff"]

[tool.semantic_release]
version_toml = ["pyproject.toml:project.version"]
commit_message = "chore(release): v{version} [skip ci]"
